# battleship-cppversion

./: Abbrev.hpp  Abbrev.hpp~  AbstractShipFactory.h  App.cpp  App.h  BasicShip.h  BattleShip.h  BattleShipBoard.h  Board.cpp  Board.cpp~  Board.h  Board.hpp  Board.h~  BoardTextView.cpp  BoardTextView.h  CMakeLists.txt  Carrier.h  Coordinate.cpp  Coordinate.h  InBoundRuleChecker.h  MyException.h  NoCollisionRuleChecker.h  NotNullPointerRuleChecker.h  Placement.cpp  Placement.h  PlacementRuleChecker.h  Point.hpp  README.md  RectangleShip.h  RuleChecker.hpp  RuleChecker.hpp~  Ship.h  ShipDisplayInfo.h  ShipFactory.cpp  ShipFactory.h  SimpleShipDisplayInfo.h  TextPlayer.cpp  TextPlayer.h  Untitled Diagram.drawio  a.out  (+11 more)
BattleShip-cppversion/BattleShip-cppversion/: main.cpp
BattleShip-cppversion/BattleShip-cppversion.xcodeproj/: project.pbxproj
BattleShip-cppversion/BattleShip-cppversion.xcodeproj/project.xcworkspace/xcuserdata/liuxiaodong.xcuserdatad/: UserInterfaceState.xcuserstate
BattleShip-cppversion/BattleShip-cppversion.xcodeproj/xcuserdata/liuxiaodong.xcuserdatad/xcschemes/: xcschememanagement.plist
Source/: AbstractShipFactory.h  App.cpp  App.h  BasicShip.h  BattleShip.h  BattleShipBoard.h  Board.h  BoardTextView.cpp  BoardTextView.h  CMakeLists.txt  Carrier.h  Coordinate.cpp  Coordinate.h  InBoundRuleChecker.h  MyException.h  NoCollisionRuleChecker.h  NotNullPointerRuleChecker.h  Placement.cpp  Placement.h  PlacementRuleChecker.h  RectangleShip.h  Ship.h  ShipDisplayInfo.h  ShipFactory.cpp  ShipFactory.h  SimpleShipDisplayInfo.h  TextPlayer.cpp  TextPlayer.h  ordinary.cpp  ordinary.h
Test/: CMakeLists.txt  CoodinateTest.cpp
